# random-opengl-project

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.md  README.md  ay  cmake-configurations.hpp
.github/: FUNDING.yml
cmake/: FindAssimp.cmake  FindGLAD.cmake  FindGLFW.cmake  FindGLM.cmake  FindSTB.cmake
docs/: CNAME  index.html
include/: CMakeLists.txt  camera.hpp  mesh.hpp  model-loader.hpp  opengl-debug.hpp  program.hpp  shader-class.hpp  shader-manager.hpp  shader-utils.hpp  simple-renderer.hpp  texture-manager.hpp  texture.hpp  utils.hpp  vertex-array.hpp  vertex.hpp  window.hpp
libs/: folder-info.txt
src/: CMakeLists.txt  camera.cpp  main.cpp  mesh.cpp  model-loader.cpp  opengl-debug.cpp  program.cpp  shader-class.cpp  shader-manager.cpp  shader-utils.cpp  simple-renderer.cpp  texture-manager.cpp  texture.cpp  utils.cpp  window.cpp
src/random-opengl-project/: CMakeLists.txt  main.cpp  window.cpp
